added pictures folder

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <img src="IMG_1222.jpg" alt="Me by the beach" width="500" height="600">
 
         </p>
-        <h3>Links</h3>
+        <h3>Links:</h3>
             <p>
                 <ul>
                     <a href="blog.html">Link to Blog Page</a>
