added photo of myself

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             One of my favortite unique experiences was when I went to Puerto Vallarta 
             in Mexico. It was fun since I swam in the ocean, ate Mexican food, and saw
             the different lifestyles in Mexico.
-            <img src="IMG_1222.jpg" alt="Me by the beach">
+            <img src="pictures/IMG_1222.jpg" alt="Me at the coast">
 
         </p>
         <h3>Links:</h3>
