--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html>
     <head> 
         <title>Index Page</title>
+        <link rel="stylesheet"
+			href="text.css">
+
     </head>
     <body>
         <h1>Index Page</h1>
