--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             One of my favortite unique experiences was when I went to Puerto Vallarta 
             in Mexico. It was fun since I swam in the ocean, ate Mexican food, and saw
             the different lifestyles in Mexico.
-            <img src="pictures/IMG_1222.jpg" alt="Me at the coast">
+            <img src="pictures/IMG_1222.jpg" alt="Me at the coast" width="300 px" height="300px">
 
         </p>
         <h3>Links:</h3>
