--- a/blog.html
+++ b/blog.html
@@ -19,5 +19,15 @@
                 were provided in the assignment to assist me in creating my pages. 
                 I used them to remind myself how html is typed and used.
             </p>
+
+            <p>
+                The most challenging part of the second assignment was using all the containers 
+                and understanding what's the difference between a parent and a child element.
+                I can say that I learned how do that in this assignment as well as adding actions to 
+                items on the page. The main thing I can say I knew before was how to resize images.
+                The most helpful resources were the lecture videos and the internet as a whole. I
+                used these resources when I was stuck on how to use different properties for styling. 
+                One thing I had to google was how to use the display property. 
+            </p>
     </body>
 </html>
