--- a/blog.html
+++ b/blog.html
@@ -29,5 +29,15 @@
                 used these resources when I was stuck on how to use different properties for styling. 
                 One thing I had to google was how to use the display property. 
             </p>
-    </body>
+            <p>
+                This assignment really put my javascript skills to the test and made me learn about it. 
+                The hardest part was understanding how to use javascript. I just was rewatching the 
+                lectures and other videos online to understand the language. The basics are the best thing 
+                I learned from this assignment. I would say I understood the concepts but not the syntax.
+                Previously using C++ in other classes helped. The best resources for this assignment were the lecture 
+                videos, youtube, and various other javascript websites. One thing I had to google was 
+                the syntax of classes and functions.
+            </p>
+    </body> 
+
 </html>
