--- a/blog.html
+++ b/blog.html
@@ -38,6 +38,16 @@
                 videos, youtube, and various other javascript websites. One thing I had to google was 
                 the syntax of classes and functions.
             </p>
+
+            <p>
+                I feel like the most challenge part about this assignment was learning exactly how to use node.js and
+                undersatnding the server side. Even while trying to complete the assignment, I was struggling a bit. 
+                I tried my best by using the lecture notes, recordings, and youtube videos as well. In this assignment 
+                I definitely gained some more understanding on the server side. However, I now know that there is much 
+                more that I need to learn. A couple things that I had to look up for this assignment were how to use node.js 
+                and how handlebars work.
+                
+            </p>
     </body> 
 
 </html>
